<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="read_attachment_label">Read Email attachments</string>
    <string name="read_attachment_desc">Allows this application to read your Email attachments.</string>
    <string name="permission_access_provider_label">Access Email provider data</string>
    <string name="permission_access_provider_desc">Allows this application to access your Email database, including received messages, sent messages, usernames and passwords.</string>
    <string name="app_name">YiMail</string>
    <string name="compose_title">Compose</string>
    <string name="debug_title">Debug</string>
    <string name="next_action">Next</string>
    <string name="okay_action">OK</string>
    <string name="cancel_action">Cancel</string>
    <string name="send_action">Send</string>
    <string name="reply_action">Reply</string>
    <string name="reply_all_action">Reply all</string>
    <string name="delete_action">Delete</string>
    <string name="forward_action">Forward</string>
    <string name="done_action">Done</string>
    <string name="discard_action">Discard</string>
    <string name="save_draft_action">Save as draft</string>
    <string name="read_unread_action">Read/Unread</string>
    <string name="read_action">Mark read</string>
    <string name="unread_action">Mark unread</string>
    <string name="favorite_action">Favorite</string>
    <string name="set_star_action">Add star</string>
    <string name="remove_star_action">Remove star</string>
    <string name="refresh_action">Refresh</string>
    <string name="add_account_action">Add account</string>
    <string name="deselect_all_action">Deselect all</string>
    <string name="compose_action">Compose</string>
    <string name="search_action">Search</string>
    <string name="open_action">Open</string>
    <string name="account_settings_action">Account settings</string>
    <string name="remove_account_action">Remove account</string>
    <string name="folders_action">Folders</string>
    <string name="accounts_action">Accounts</string>
    <string name="mark_as_read_action">Mark as read</string>
    <string name="mark_as_unread_action">Mark as unread</string>
    <string name="add_cc_bcc_action">Add Cc/Bcc</string>
    <string name="add_attachment_action">Add attachment</string>
    <string name="dump_settings_action">Dump settings</string>
    <string name="choose_attachment_dialog_title">Choose attachment</string>
    <string name="status_loading_more">Loading messages\u2026</string>
    <string name="status_sending_messages">Sending messages\u2026</string>
    <string name="status_network_error">Connection error</string>
    <string name="notification_new_title">New email</string>
    <string name="error_loading_message_body">Unexpected error while loading message text.  Message
        may be too large to view.</string>
    <plurals name="notification_new_one_account_fmt">
        <item quantity="one"><xliff:g id="unread_message_count" example="1">%1$d</xliff:g> unread (<xliff:g id="account">%2$s</xliff:g>)</item> 
        <item quantity="few"><xliff:g id="unread_message_count" example="2">%1$d</xliff:g> unread (<xliff:g id="account">%2$s</xliff:g>)</item> 
        <item quantity="other"><xliff:g id="unread_message_count" example="279">%1$d</xliff:g> unread (<xliff:g id="account">%2$s</xliff:g>)</item>
    </plurals>
    <plurals name="notification_new_multi_account_fmt">
        <item quantity="few">in <xliff:g id="number_accounts" example="2">%d</xliff:g> accounts</item>
        <item quantity="other">in <xliff:g id="number_accounts" example="10">%d</xliff:g> accounts</item>
    </plurals>
     <string name="mailbox_name_server_nexbox">Newbox</string>
    <string name="mailbox_name_server_inbox">Inbox</string>
    <string name="mailbox_name_server_outbox">Outbox</string>
    <string name="mailbox_name_server_drafts">Drafts</string>
    <string name="mailbox_name_server_trash">Trash</string>
    <string name="mailbox_name_server_sent">Sent</string>
    <string name="mailbox_name_server_junk">Junk</string>
    <string name="mailbox_name_display_newbox">Compose</string>
    <string name="mailbox_name_display_inbox">Inbox</string>
    <string name="mailbox_name_display_outbox">Outbox</string>
    <string name="mailbox_name_display_drafts">Drafts</string>
    <string name="mailbox_name_display_trash">Trash</string>
    <string name="mailbox_name_display_sent">Sent</string>
    <string name="mailbox_name_display_junk">Junk</string>
    <string name="debug_version_fmt">Version: <xliff:g id="version">%s</xliff:g></string>
    <string name="debug_enable_debug_logging_label" translatable="false">Enable extra debug logging?</string>
    <string name="debug_enable_sensitive_logging_label" translatable="false">Enable sensitive information debug logging? (May show passwords in logs.)</string>
    <string name="debug_enable_exchange_logging_label" translatable="false">Enable exchange parser logging? (Extremely verbose)</string>
    <string name="debug_enable_exchange_file_logging_label" translatable="false">Enable exchange sd card logging?</string>
    <string name="account_folder_list_separator_accounts">Accounts</string>
    <string name="account_folder_list_summary_inbox">Combined Inbox</string>
	<string name="account_folder_list_summary_uninbox">"Unread Inbox"</string>
    <string name="account_folder_list_summary_starred">Starred</string>
    <string name="account_folder_list_summary_drafts">Drafts</string>
    <string name="account_folder_list_summary_outbox">Outbox</string>
    <string name="account_folder_list_refresh_toast">Please longpress an account to refresh it</string>
    <string name="mailbox_list_title">Mailbox</string>
    <string name="message_list_load_more_messages_action">Load more messages</string>
    <string name="message_list_send_pending_messages_action">Send outgoing messages</string>
    <string name="message_compose_to_hint">To</string>
    <string name="message_compose_cc_hint">Cc</string>
    <string name="message_compose_bcc_hint">Bcc</string>
    <string name="message_compose_subject_hint">Subject</string>
    <string name="message_compose_body_hint">Compose Mail</string>
    <string name="message_compose_fwd_header_fmt">\n\n-------- Original Message --------\nSubject: <xliff:g id="subject">%1$s</xliff:g>\nFrom: <xliff:g id="sender">%2$s</xliff:g>\nTo: <xliff:g id="to">%3$s</xliff:g>\nCC: <xliff:g id="cc">%4$s</xliff:g>\n\n</string>
    <string name="message_compose_reply_header_fmt">\n\n<xliff:g id="sender">%s</xliff:g> wrote:\n\n
	</string>
    <string name="message_compose_quoted_text_label">Quoted text</string>
    <string name="message_compose_error_no_recipients">You must add at least one recipient.</string>
    <string name="message_compose_error_invalid_email">Some email addresses are invalid.</string>
    <string name="message_compose_attachments_skipped_toast">Some attachments cannot be forwarded because they have not downloaded.</string>
    <string name="message_compose_attachment_size">File too large to attach.</string>
    <string name="message_compose_display_name"><xliff:g id="name" example="John">%1$s</xliff:g> and <xliff:g id="number" example="27">%2$d</xliff:g> others</string>
    <string name="message_view_to_label">To:</string>
    <string name="message_view_cc_label">Cc:</string>
    <string name="message_view_attachment_view_action">Open</string>
    <string name="message_view_attachment_download_action">Save</string>
    <string name="message_view_status_attachment_saved">Attachment savedas <xliff:g id="filename">%s</xliff:g>.</string>
    <string name="message_view_status_attachment_not_saved">Unable to save attachment.</string>
    <string name="message_view_show_pictures_instructions">Select \"Show pictures\" to display embedded pictures.</string>
    <string name="message_view_show_pictures_action">Show pictures</string>
    <string name="message_view_fetching_attachment_toast">Fetching attachment.</string>
    <string name="message_view_fetching_attachment_progress">Fetching attachment <xliff:g id="filename">%s</xliff:g></string>
    <string name="message_view_invite_view">View in Calendar &#xbb;</string>
    <string name="message_view_invite_title">Calendar Invite</string>
    <string name="message_view_invite_text">Going?</string>
    <string name="message_view_invite_accept">" Yes"</string>
    <string name="message_view_invite_maybe">" Maybe"</string>
    <string name="message_view_invite_decline">" No"</string>
    <string name="message_view_invite_toast_yes">You have accepted this invitation</string>
    <string name="message_view_invite_toast_maybe">  You have replied \"maybe\" to this invitation</string>
    <string name="message_view_invite_toast_no">You have declined this invitation</string>
    <plurals name="message_deleted_toast">
        <item quantity="one">Message deleted.</item>
        <item quantity="other">Messages deleted.</item>
    </plurals>
    <string name="message_discarded_toast">Message discarded.</string>
    <string name="message_saved_toast">Message saved as draft.</string>
    <string name="message_view_display_attachment_toast">This attachment cannot be displayed.</string>
    <string name="account_setup_basics_title">Set up email</string>
    <string name="account_setup_basics_exchange_title"> Add an Exchange account</string>
    <string name="account_setup_basics_exchange_title_alternate"> Add an Exchange ActiveSync account</string>
    <string name="accounts_welcome">You can configure Email for most accounts in just a few steps.</string>
    <string name="accounts_welcome_exchange">You can configure an Exchange account in just a few steps.</string>
    <string name="accounts_welcome_exchange_alternate"> You can configure an Exchange ActiveSync account in just a few steps.</string>
    <string name="account_setup_basics_email_hint">Email address</string>
    <string name="account_setup_basics_password_hint">Password</string>
    <string name="account_setup_basics_default_label">Send email from this account by default.</string>
    <string name="account_setup_basics_manual_setup_action">Manual setup</string>
    <string name="account_setup_username_password_toast">Please type a valid email address and password.</string>
    <string name="account_duplicate_dlg_title">Duplicate Account</string>
	<string name="confirm">confirm</string>
	<string name="cancel">cancel</string>
	<string name="soft_update">Software update</string>
	<string name="soft_update_message">Find the new version, suggested updating.</string>
	<string name="about">about</string>
	<string name="user_idear">feedback</string>
	<string name="select_all"> select all</string>
	<string name="storage_result">storage</string>
	<string name="sdcard_name">SD card</string>
	<string name="sdcard_all_capacity">Total capacity:<xliff:g id="all_store">%s</xliff:g></string>
	<string name="sdcard_available_capacity">Available space:<xliff:g id="avail_storre">%s</xliff:g></string>
	<string name="data_name">Mobile data memory</string>
	<string name="data_all_capacity">Total capacity:<xliff:g id="all_store">%s</xliff:g></string>
	<string name="data_available_capacity">Available space:<xliff:g id="avail_storre">%s</xliff:g></string>
	<string name="database_name">database</string>
	<string name="database_all_capacity">0KB</string>
	<string name="netdata_name">Traffic statistics</string>
	<string name="netdata_capacity">Already use the traffic:<xliff:g id="stream_data">%s</xliff:g> \n（Restart mobile and Reset to zero）</string>
	<string name="system_set_title">"System configuration"</string>
	<string name="skin_manage_menu">Skin management</string>
	<string name="contacts_no_notify">not notify</string>
	<string name="music_backgroud_lable">music</string>
	<string name="share_app">share application</string>
</resources>