<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:layout_width="fill_parent"
	android:layout_height="wrap_content">
  <ScrollView android:layout_width="match_parent"
        android:layout_height="0dip" android:layout_weight="1"
        android:scrollbarStyle="outsideInset"
        android:fillViewport="true">
   <LinearLayout 
	   android:orientation="vertical" android:layout_width="fill_parent"
	   android:layout_height="wrap_content">
		<TextView android:id="@+id/sdcard_title" 
			android:text="@string/sdcard_name"
			android:textAppearance="?android:attr/textAppearanceMedium"
	        
			style="?android:attr/listSeparatorTextViewStyle"
			android:paddingLeft="5dip"
			android:layout_width="fill_parent" 
			android:layout_height="wrap_content"
			android:paddingTop="5dip" 
			android:paddingBottom="5dip" />
			
		<TextView android:id="@+id/sdcard_capacity" 
			android:text="@string/sdcard_all_capacity"
			
			android:textSize="15dip"
			android:paddingLeft="20dip" 
			android:layout_width="fill_parent"
			android:layout_height="wrap_content" 
			android:paddingTop="5dip" />
			
		<TextView android:id="@+id/sdcard_available" 
			android:text="@string/sdcard_available_capacity"
			
			android:textSize="15dip"
			android:paddingLeft="20dip" 
			android:layout_width="fill_parent"
			android:layout_height="wrap_content" 
			android:paddingTop="5dip" />
			
		<TextView android:id="@+id/data_title" 
			android:text="@string/data_name"
			style="?android:attr/listSeparatorTextViewStyle"
			android:textAppearance="?android:attr/textAppearanceMedium"
	        
			android:paddingLeft="5dip"
			android:layout_width="fill_parent" 
			android:layout_height="wrap_content"
			android:paddingTop="5dip" 
			android:paddingBottom="5dip" />
			
		<TextView android:id="@+id/data_capacity" 
			android:text="@string/data_all_capacity"
			
			android:textSize="15dip"
			android:paddingLeft="20dip" 
			android:layout_width="fill_parent"
			android:layout_height="wrap_content" 
			android:paddingTop="5dip" />
			
		<TextView android:id="@+id/data_available" 
			android:text="@string/data_available_capacity"
			
			android:textSize="15dip"
			android:paddingLeft="20dip" 
			android:layout_width="fill_parent"
			android:layout_height="wrap_content" 
			android:paddingTop="5dip" />
			
		<TextView android:id="@+id/database_title" 
			android:text="@string/database_name"
			style="?android:attr/listSeparatorTextViewStyle"
			android:textAppearance="?android:attr/textAppearanceMedium"
	        
			android:paddingLeft="5dip"
			android:layout_width="fill_parent" 
			android:layout_height="wrap_content"
			android:paddingTop="5dip" 
			android:paddingBottom="5dip" />
			
		<TextView android:id="@+id/database_capacity" 
			android:text="@string/database_all_capacity"
			
			android:textSize="15dip"
			android:paddingLeft="20dip" 
			android:layout_width="fill_parent"
			android:layout_height="wrap_content" 
			android:paddingTop="5dip" />
			
		<TextView android:id="@+id/netdata_title" 
			android:text="@string/netdata_name"
			style="?android:attr/listSeparatorTextViewStyle"
			android:textAppearance="?android:attr/textAppearanceMedium"
	        
			android:paddingLeft="5dip"
			android:layout_width="fill_parent" 
			android:layout_height="wrap_content"
			android:paddingTop="5dip" 
			android:paddingBottom="5dip" />
			
		<TextView android:id="@+id/netdata" 
			android:text="@string/netdata_capacity"
			
			android:textSize="15dip"
			android:paddingLeft="20dip" 
			android:layout_width="fill_parent"
			android:layout_height="wrap_content" 
			android:paddingTop="5dip" />
		<!--<TextView android:id="@+id/account_title" 
			android:text="@string/account_name"
			style="?android:attr/listSeparatorTextViewStyle"
			android:textAppearance="?android:attr/textAppearanceMedium"
	        
			android:paddingLeft="5dip"
			android:layout_width="fill_parent" 
			android:layout_height="wrap_content"
			android:paddingTop="5dip" 
			android:paddingBottom="5dip" />
	
		<TextView android:id="@+id/account_data_area" 
			android:text="@string/account_data"
			
			android:textSize="15dip"
			android:paddingLeft="20dip" 
			android:layout_width="fill_parent"
			android:layout_height="wrap_content" 
			android:paddingTop="5dip" />
			
		<TextView android:id="@+id/account_sdcard_area" 
			android:text="@string/account_sdcard"
			
			android:textSize="15dip"
			android:paddingLeft="20dip" 
			android:layout_width="fill_parent"
			android:layout_height="wrap_content" 
			android:paddingTop="5dip" />
		-->
 
    </LinearLayout>
   </ScrollView>
 </LinearLayout> 
