<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="fill_parent"
    >
    
	<TextView  
		android:id="@+id/contacts_content"
	    android:layout_width="fill_parent" 
	    android:layout_height="wrap_content" 
        android:textColor="?android:attr/textColorPrimary"
        android:textAppearance="?android:attr/textAppearanceMedium"
	    android:gravity="left"
	    android:paddingLeft="10dip"
	    android:paddingBottom="10dip"/>
	<CheckBox android:id="@+id/contacts_moren"
		android:text="@string/contacts_no_notify"
		android:layout_width="fill_parent" 
	    android:layout_height="wrap_content" 
	    />
	<LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="5dip"
        android:paddingLeft="4dip"
        android:paddingRight="4dip"
        android:paddingBottom="1dip"   
        android:background="@android:drawable/bottom_bar"
        >
        <Button
            android:id="@+id/confirm"
            android:text="@string/confirm"
            android:layout_height="match_parent"
            android:layout_width="0dip"
            android:layout_weight="1" />
        <Button
            android:id="@+id/cancel"
            android:layout_height="match_parent"
            android:layout_width="0dip"
            android:text="@string/cancel"
            android:layout_weight="1" />

    </LinearLayout>
</LinearLayout>
