<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="fill_parent"
    >
    
    <ScrollView android:layout_width="match_parent"
        android:layout_height="0dip" android:layout_weight="1"
        android:scrollbarStyle="outsideInset"
        android:fillViewport="true">
         <LinearLayout android:orientation="vertical"
            android:layout_width="match_parent" 
            android:layout_height="wrap_content">
			<TextView  
				android:id="@+id/update_content"
			    android:layout_width="fill_parent" 
			    android:layout_height="wrap_content" 
			    android:text="@string/soft_update_message"
		        android:textColor="?android:attr/textColorPrimary"
		        android:textAppearance="?android:attr/textAppearanceSmall"
			    android:gravity="left"
			    android:paddingBottom="10dip"   
			    />
			
			<LinearLayout
		        android:orientation="horizontal"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:paddingTop="5dip"
		        android:paddingLeft="4dip"
		        android:paddingRight="4dip"
		        android:paddingBottom="1dip"   
		        android:background="@android:drawable/bottom_bar"
		        >
		        <Button
		            android:id="@+id/confirm"
		            android:text="@string/confirm"
		            android:layout_height="match_parent"
		            android:layout_width="0dip"
		            android:layout_weight="1" />
		        <Button
		            android:id="@+id/cancel"
		            android:layout_height="match_parent"
		            android:layout_width="0dip"
		            android:text="@string/cancel"
		            android:layout_weight="1" />
		
		    </LinearLayout>
      </LinearLayout>
    </ScrollView>
</LinearLayout>
