<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <include layout="@layout/connection_error_banner" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent" >

        <com.mail163.email.activity.PullToRefreshListView
            android:id="@android:id/list"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:cacheColorHint="@color/background_cachhint"
            android:scrollbars="vertical" />

        <LinearLayout
            android:id="@+id/footer_organize"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bottom_bar"
            android:layout_gravity="bottom"
            android:orientation="horizontal"
            android:paddingBottom="1dip"
            android:paddingLeft="4dip"
            android:paddingRight="4dip"
            android:paddingTop="5dip"
            android:visibility="gone" >

            <Button
                android:id="@+id/btn_read_unread"
                android:layout_width="0dip"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/read_unread_action" />

            <Button
                android:id="@+id/btn_multi_favorite"
                android:layout_width="0dip"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/favorite_action" />

            <Button
                android:id="@+id/btn_multi_delete"
                android:layout_width="0dip"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/delete_action" />
        </LinearLayout>
    </FrameLayout>

</LinearLayout>